# obsidian-pivloop-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.AGENTS/: PRD.md
.AGENTS/plans/: phase-1-foundation.md  phase-2-note-operations-tool.md  phase-3-vault-search-tool.md  phase-4-tag-management.md  phase-5-vault-analytics.md  phase-6-polishing.md
.AGENTS/reference/: obsidian_copilot_plugin_guide.md  pydantic_ai_tools_guide.md
.claude/commands/: commit.md  create_global_rules_prompt.md  create_reference.md  plan-feature.md  prime.md
app/: __init__.py  config.py  dependencies.py  main.py
app/analytics/: __init__.py  models.py  tools.py
app/chat/: __init__.py  agent.py  models.py  router.py
app/notes/: __init__.py  models.py  tools.py
app/search/: __init__.py  models.py  tools.py
app/tags/: __init__.py  models.py  tools.py
app/tests/: conftest.py  test_analytics.py  test_chat.py  test_notes.py  test_search.py  test_tags.py
